--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 absl-py==0.7.1
 astor==0.7.1
+certifi==2018.4.16
+chardet==3.0.4
 cycler==0.10.0
 decorator==4.4.0
 gast==0.2.2
-graphviz==0.5.2
+graphviz==0.8.4
 grpcio==1.20.1
-h5py==2.9.0
+h5py==2.7.1
+idna==2.6
 imageio==2.5.0
 imutils==0.5.2
 Keras==2.2.4
@@ -15,24 +18,31 @@ kiwisolver==1.1.0
 Markdown==3.1
 matplotlib==3.0.3
 mock==2.0.0
+mxnet-cu100==1.5.0
 networkx==2.3
-numpy==1.16.3
+numpy==1.17.0
 opencv-contrib-python==4.1.0.25
+patool==1.12
 pbr==5.2.0
-Pillow==6.0.0
+Pillow==5.1.0
 progressbar==2.5
+progressbar2==3.37.1
 protobuf==3.7.1
 pydot==1.3.0
 pyparsing==2.4.0
 python-dateutil==2.8.0
+python-utils==2.3.0
 PyWavelets==1.0.3
 PyYAML==5.1
+requests==2.22.0
 scikit-image==0.15.0
 scikit-learn==0.20.3
-scipy==1.2.1
-six==1.12.0
+scipy==1.1.0
+six==1.11.0
 tensorboard==1.13.1
 tensorflow-estimator==1.13.0
 tensorflow-gpu==1.13.1
 termcolor==1.1.0
+urllib3==1.22
 Werkzeug==0.15.2
+xmltodict==0.11.0
