--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,9 @@ kiwisolver==1.1.0
 Markdown==3.1
 matplotlib==3.0.3
 mock==2.0.0
-mxnet-cu100==1.5.0
+mxnet-cu100mkl==1.4.1
 networkx==2.3
-numpy==1.17.0
+numpy==1.14.6
 opencv-contrib-python==4.1.0.25
 patool==1.12
 pbr==5.2.0
